# dbxIntacctAgentTools

./: .gitignore  LICENSE  NEXT_STEPS.md  README.md  deploy.sh
.github/workflows/: ci.yml
dbxIntacctAgentTools_infra/: README.md  databricks.yml
dbxIntacctAgentTools_infra/resources/: infra_warehouse.sql_warehouse.yml  intacct.lakebase.yml  intacct.schema.yml  intacct.secret_scope.yml  intacct_query_agent.registered_model.yml  intacct_traces.experiment.yml  mcp_call_log_sync.job.yml  mlflow_artifacts.volume.yml  otel.dashboard.yml  raw_responses.volume.yml  uc_setup.job.yml
dbxIntacctAgentTools_infra/src/dashboards/: otel.lvdash.json  verify_otel.sql
dbxIntacctAgentTools_infra/src/sync/: mcp_call_log_sync.ipynb
dbxIntacctAgentTools_infra/src/uc_setup/: ensure-service-principal.ipynb  target-tables-ddl.sql
dbxIntacctAgentTools_mcp/: README.md  databricks.yml
dbxIntacctAgentTools_mcp/mcp-intacct/: .env.example  .npmrc  README.md  app.yaml  appkit.plugins.json  package-lock.json  package.json
dbxIntacctAgentTools_mcp/mcp-intacct/client/: index.html
dbxIntacctAgentTools_mcp/mcp-intacct/scripts/: regenerate_intacct_client.sh
dbxIntacctAgentTools_mcp/mcp-intacct/server/: server.ts
dbxIntacctAgentTools_mcp/mcp-intacct/tests/: intacct-auth.test.ts  intacct-client-ap-cash.test.ts  intacct-client-writes.test.ts  lakebase-call-log.test.ts  (+5 more)
dbxIntacctAgentTools_mcp/resources/: intacct_mcp.app.yml
dbxIntacctAgentTools_sdk/: README.md  pyproject.toml
dbxIntacctAgentTools_sdk/scripts/: regenerate_client.sh
dbxIntacctAgentTools_sdk/src/intacct_sdk/: __init__.py  auth.py  backoff.py  client.py  credentials.py  exceptions.py  pagination.py
dbxIntacctAgentTools_sdk/src/intacct_sdk/_generated/: README.md
dbxIntacctAgentTools_sdk/tests/: test_auth.py
(+31 files in other folders)
