[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intacct_sdk"
version = "0.1.0"
description = "Python SDK for the Sage Intacct REST API — auth, token caching, pagination, backoff, and a curated high-level client"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "../LICENSE" }
authors = [{ name = "Matthew Giglia", email = "matthew.giglia@databricks.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "requests>=2.32",
  "pydantic>=2.7",
  "tenacity>=9.0",
]

[project.optional-dependencies]
databricks = [
  "databricks-sdk>=0.40",
]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-mock>=3",
  "ruff>=0.6",
  "mypy>=1.11",
  "responses>=0.25",
  "openapi-python-client>=0.21",
]

[project.urls]
Homepage = "https://github.com/databricks/dbxIntacctAgentTools"
Repository = "https://github.com/databricks/dbxIntacctAgentTools"

[tool.hatch.build.targets.wheel]
packages = ["src/intacct_sdk"]

[tool.hatch.build.targets.sdist]
include = ["src/intacct_sdk", "README.md"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
